# safe-shred

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.cfg
.github/workflows/: build.yml
cli/: sash_cli.c
core/: shred.c  shred.h  strategy.c  strategy.h  util.c  util.h
gui/: sash_gui.c
resources/: install.bat  sash.manifest  sash_cli.manifest  sash_cli.rc  sash_gui.manifest  sash_gui.rc  uninstall.bat
test_dll/: CMakeLists.txt
tests/: test_shred.py
